<resources>
    <string name="app_name">COS Student</string>

    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="change_password">Change Password</string>
    <string name="profile">Profile</string>
    <string name="school_info">School Info</string>
    <string name="calender">Calender</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="terms_conditions_and_conditions">Terms &amp; Conditions</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">Loading..</string>
    <string name="not_valid_email">Not a valid Email Address</string>
    <string name="empty_necessary_field">Empty necessary field</string>
    <string name="short_password">Too Short Password</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="back_to_login">Back to login</string>
    <string name="send">Send</string>
    <string name="recover_your_password">Recover your password through email address</string>
    <string name="welcome">Welcome</string>
    <string name="searchable_hint">Search anything</string>
    <string name="search">Search</string>


    <string-array name="section">
        <item>Food Store</item>
        <item>General Store</item>
        <item>Laundry</item>
        <item>Xerox center</item>
        <item>Academic</item>
        <item>Other</item>
    </string-array>

    <string name="rupee">₹</string>

    <!--For Wizard-->
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
    <string name="review">Review</string>

    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>

    <string name="submit_confirm_message">Place the order with the deli? You will receive an email
        confirmation.</string>
    <string name="submit_confirm_button">Place order</string>
    <string name="home">Home</string>
    <string name="settled">Settled</string>
    <string name="unsettled">Unsettled</string>
    <string name="please_wait">Please Wait</string>
    <string name="menu">Menu</string>
</resources>
