<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginScreen"
    android:gravity="center_horizontal"
    android:id="@+id/llLogin"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/cash"
        android:id="@+id/adurcup_logo"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailInput"
        android:textColorHint="@android:color/white"
        android:padding="16dp"
        app:errorTextAppearance="@style/error_appearance">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            style="@style/EditTextTheme"
            android:hint="@string/email_address"
            android:textColorHint="@android:color/white"
            android:id="@+id/email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordInput"
        android:textColorHint="@android:color/white"
        android:padding="16dp"
        app:errorTextAppearance="@style/error_appearance">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            style="@style/EditTextTheme"
            android:hint="@string/password"
            android:id="@+id/password"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        style="?android:attr/bottomDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:id="@+id/login"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/forgot_password"
        android:id="@+id/forgot_password"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:id="@+id/progress_bar"
        />

</LinearLayout>
