<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginScreen"
    android:gravity="center_horizontal"
    android:id="@+id/llChangePassword"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_change_password"
    >


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/oldPasswordInput"
        android:layout_marginTop="48dp"
        android:padding="16dp"
        android:textColorHint="@color/colorPrimary"
        app:errorTextAppearance="@style/error_appearance">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            style="@style/EditTextTheme"
            android:hint="@string/old_password"
            android:id="@+id/oldPassword"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPasswordInput"
        android:padding="16dp"
        android:textColorHint="@color/colorPrimary"
        app:errorTextAppearance="@style/error_appearance">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            style="@style/EditTextTheme"
            android:hint="@string/new_password"
            android:id="@+id/newPassword"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reEnterNewPasswordInput"
        android:padding="16dp"
        android:textColorHint="@color/colorPrimary"
        app:errorTextAppearance="@style/error_appearance">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            style="@style/EditTextTheme"
            android:hint="@string/re_enter_new_password"
            android:id="@+id/reEnterNewPassword"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        style="?android:attr/bottomDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_margin="20dp"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:id="@+id/changePassword"
        />


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:id="@+id/progress_bar"
        />

</LinearLayout>
